[package]
name = "banco_teller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
async_zmq = "0.3.2"
log = "0.4.14"
log4rs = "1.0.0"
prost = "0.9.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
zmq = "0.9.2"

[build-dependencies]
prost-build = "0.9.0"
